still struggline with posting

--- a/content/post/2022-05-12-savvy-surveys-demographic-demons/SurvDemogs.Rmd
+++ b/content/post/2022-05-12-savvy-surveys-demographic-demons/SurvDemogs.Rmd
@@ -20,7 +20,7 @@ If you have never created survey questions, you would be excused if you assume t
 
 Whenever you include an “Other” choice in your selections for a demographic question, you hope that few people need to resort to it.  If many respondents choose “Other,” your list of selections failed to cover the likely terrain.  Of course, you could leave that catchall category without an explanatory text box, but then you have a black hole – the infamous “Other” -- that defies analysis or interpretation.  But once you let its nose under the tent with a text box, you must decide how to classify the oddballs.
 
-Careful thought, survey experience, and conscientious **pretesting** can reduce to a minimum the derangements of demographics, but the devil always creeps in.  It usually means you must email or call the person to figure out what they meant, and keep track of their explanation, and correctly add it to your data set.  This piecework is time-consuming, boring, and error prone.  Or you can make unilateral decisions, defend them in the **methodology** section, and hope for agreement or sympathetic understanding.
+Careful thought, survey experience, and conscientious **pretesting** can reduce to a minimum the derangement of demographics, but the devil always creeps in.  It usually means you must email or call the person to figure out what they meant, and keep track of their explanation, and correctly add it to your data set.  This piecework is time-consuming, boring, and error prone.  Or you can make unilateral decisions, defend them in the **methodology** section, and hope for agreement or sympathetic understanding.
 
 Despite all your attention to detail and stress testing, real life often humbles you on demographic questions.  If yours is a **one-shot survey**, you have no realistic chance to correct the mistake after all the responses have come back in.  My advice is to look quickly yet carefully at the first few responses that show up and run through a checklist of the kinds of issues discussed here.  It is far better to correct the problems as quickly as you can, maybe by revising selections, improving the instructions, or rewording the question.  The inventiveness (or perversity?) and complexities of humans may still defeat you, despite all your efforts.  
 
