first data clean

--- a/content/post/2022-05-20-savvy-surveys-questions-that-ask-for-priorities/SurvPriorities.Rmd
+++ b/content/post/2022-05-20-savvy-surveys-questions-that-ask-for-priorities/SurvPriorities.Rmd
@@ -18,7 +18,7 @@ More than one item might receive the same rating.  Usually when you define a rat
 
 Instructions are particularly important for **prioritizing questions** because you want to avoid someone inadvertently reversing the rank order or scale.  Your instruction might say, “This question uses 1 to rate the least desirable method of outside counsel cost control; it uses 10 to rate the best method.  Be sure to follow that rating order in your answers.”  You might also resort to **font choices**, such as bolding or coloring “least desirable” and “best.”  We have discussed other measures to try to assure compliance in “Add Instructions.” 
 
-•	**Forced rank questions**.  Here, the question instructs the respondents to assign ratings, but with the difference that constraints are imposed on the distribution of the ratings, e.g., no more than one third 1-2 or high, one third 3-4 or medium, and one third 5-6 or low.  Alternatively, no more than two “high” and two “low.”  A third possibility might be to require that for each “high” there must be a “low”, or any other ratio as between the ratings.  It may, however, demand too much of your **hosting** software to enforce such parameters.
+•	**Forced rank questions**.  Here, the question instructs the respondents to assign ratings, but with the difference that constraints are imposed on the distribution of the ratings, e.g., no more than one third 1-2 or high, one third 3-4 or medium, and one third 5-6 or low.  Alternatively, no more than two “high” and two “low.”  A third possibility might be to require that for each “high” there must be a “low”, or any other ratio as between the ratings.  It may, however, demand too much of your **hosting software** to enforce such parameters.
 
 •	**Percentage allocation questions**.  In this format, survey takers are instructed that they have 100 points to distribute among the items, to be allocated according to how important they deem each item to be.  The percentages assigned must total 100 and the respondent need not assign a percentage to each selection.  [Note how relatively complex the instructions must be.  And further note that the hosting software should check that the total equals 100.] 
 
